force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <externalId>true</externalId>
    <label>Student ID</label>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <length>20</length>
</CustomField>