force-app/main/default/objects/Student__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <type>Text</type>
    <length>100</length>
</CustomField>