force-app/main/default/objects/Student__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>First Year</fullName>
            </value>
            <value>
                <fullName>Second Year</fullName>
            </value>
            <value>
                <fullName>Third Year</fullName>
            </value>
            <value>
                <fullName>Fourth Year</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>