force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_ID__c</columns>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>University__c</columns>
    <columns>Course__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>